# PkgExtras

./: README.md  repo.json
Modules/: FindAmiVideo.cmake  FindArchive.cmake  FindGIF.cmake  FindIFF.cmake  FindILBM.cmake  FindJBig.cmake  FindJBig2Enc.cmake  FindLeptonica.cmake  FindNanoSVG.cmake  FindOpenJP2.cmake  FindQuickJS.cmake  FindTIFF.cmake  FindTidy.cmake  FindWebP.cmake
jbigkit/: FindJBig.cmake
jbigkit/2.1/: CMakeLists.txt
